Revert "Revert "Merge branch 'master' into dev-raja""
This reverts commit a8107aa1e031b9990bed1bf4823267fa6b830794.
